# Programming

01_HelloCmake/: CMakeLists.txt  hellocmake.c
02_HelloWorld/: CMakeLists.txt  hello.c
02_HelloWorld/include/: line.h  object.h  point.h  rectangle.h  shape.h  types.h  utils.h  value.h
02_HelloWorld/src/: CMakeLists.txt  line.c  object.c  point.c  rectangle.c  shape.c  types.c  value.c
03_HelloGObject/: .cproject  .project  CMakeLists.txt  Makefile  hello_gobject.c  myobj.c  myobj.h  shape.c  shape.h
03_VarArgsPratice/C test/20091215/: 2p.cpp  2p2.cpp  2p3.cpp
03_VarArgsPratice/C test/20091216/: 3p1.cpp  3p2.cpp  3p3.cpp
Slides/: ProgFun.ppt
