CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

INCLUDE( FindPkgConfig )

PKG_CHECK_MODULES( GOBJECT REQUIRED gobject-2.0 )

SET (CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES(
	${GOBJECT_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
	${GOBJECT_LIBRARY_DIRS}
)

MESSAGE( GOBJECT_LIBRARY_DIRS=${GOBJECT_LIBRARY_DIRS} )

SET( HELLO_GOBJECT_SRC hello_gobject myobj )

ADD_EXECUTABLE( hello_gobject ${HELLO_GOBJECT_SRC})

TARGET_LINK_LIBRARIES( hello_gobject ${GOBJECT_LIBRARIES} )
